# ntt-game-engine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt
examples/GraphicManagerExample/: CMakeLists.txt  main.cpp  resources.json
examples/LogExample/: CMakeLists.txt  main.cpp
examples/LogManagerExample/: CMakeLists.txt  main.cpp
examples/ResourceManagerExample/: CMakeLists.txt  main.cpp  resources.json
include/NTTEngine/GraphicManager/: GraphicManagerImpl.hpp  GraphicRenderObject.hpp  GraphicResource.hpp  GraphicSpriteRenderObject.hpp
include/NTTEngine/LogManager/: LogManagerImpl.hpp
include/NTTEngine/ResourceManager/: ResourceManagerImpl.hpp
interface/NTTEngine/: NTTEngine.hpp
interface/NTTEngine/Common/: Common.hpp  Exception.hpp  String.hpp
interface/NTTEngine/LogManager/: LogManager.hpp
interfaces/NTTEngine/: Common.hpp  EngineObject.hpp  NTTEngine.hpp
interfaces/NTTEngine/GraphicManager/: GraphicManager.hpp
interfaces/NTTEngine/LogManager/: LogManager.hpp  LogMessage.hpp
interfaces/NTTEngine/ResourceManager/: ResourceDef.hpp  ResourceManager.hpp  ResourceObject.hpp  ResourceType.hpp
interfaces/NTTEngine/TimeUtils/: TimeUtils.hpp
loader/: LibraryLoader.hpp
src/: EngineObject.cpp  GraphicManagerImpl.cpp  GraphicRenderObject.cpp  GraphicResource.cpp  GraphicSpriteRenderObject.cpp  LogManagerImpl.cpp  LogMessage.cpp  ResourceManagerImpl.cpp  ResourceObject.cpp  TimeTrigger.cpp
src/LogManager/: LogManagerImpl.cpp
vendors/: CMakeLists.txt
